--- a/src/Test interactive Epub checker (epub3)/OEBPS/Text/FormMultiQuiz.xhtml
+++ b/src/Test interactive Epub checker (epub3)/OEBPS/Text/FormMultiQuiz.xhtml
@@ -10,12 +10,20 @@
 
 <body>
 <h1>Forms</h1>
-<p>Test the possibility to create interactions through forms controls. (not really finished)</p>
+<p>Test the possibility to create interactions through forms controls. </p>
   <form action="#" id="input" method="get">
 	<h2 id="sigil_toc_id_15">Quiz</h2>
-    <p>What is the capital of England?: <input id="answer1" name="answer" type="text"/>  <input onclick="if (document.getElementById('answer1').value == 'London') {alert('perfect!')}else{alert('try again')};" type="button" value="check"/> </p>
-<p>What is the capital of China?: <input id="answer2" name="answer" type="text"/>  <input onclick="if (document.getElementById('answer2').value == 'Beijing') {alert('perfect!')}else{alert('try again')};" type="button" value="check"/> </p>
-<p>What is the capital of Spain?: <input id="answer3" name="answer" type="text"/>  <input onclick="if (document.getElementById('answer3').value == 'Madrid') {alert('perfect!')}else{alert('try again')};" type="button" value="check"/> </p>
-<p>What is the capital of Ohio?: <input id="answer4" name="answer" type="text"/>  <input onclick="if (document.getElementById('answer4').value == 'Cleveland') {alert('perfect!')}else{alert('try again')};" type="button" value="check"/> </p></form>
+
+    <p>What is the capital of England?: <br/> 
+<input id="answer1" name="answer" type="text"/>  <input onclick="if (document.getElementById('answer1').value == 'London') {alert('perfect!')}else{alert('try again')};" type="button" value="check"/> </p>
+
+<p>What is the capital of China?: <br/> 
+<input id="answer2" name="answer" type="text"/>  <input onclick="if (document.getElementById('answer2').value == 'Beijing') {alert('perfect!')}else{alert('try again')};" type="button" value="check"/> </p>
+
+<p>What is the capital of Spain?:<br/> 
+ <input id="answer3" name="answer" type="text"/>  <input onclick="if (document.getElementById('answer3').value == 'Madrid') {alert('perfect!')}else{alert('try again')};" type="button" value="check"/> </p>
+
+<p>What is the capital of Ohio?: <br/> 
+<input id="answer4" name="answer" type="text"/>  <input onclick="if (document.getElementById('answer4').value == 'Cleveland') {alert('perfect!')}else{alert('try again')};" type="button" value="check"/> </p></form>
 </body>
 </html>
