--- a/src/Test interactive Epub checker (epub3)/OEBPS/Text/footnotePlay.xhtml
+++ b/src/Test interactive Epub checker (epub3)/OEBPS/Text/footnotePlay.xhtml
@@ -11,32 +11,32 @@
   <p>&#160;</p>
 <section>
 
-  <h2 class="TITLE">PROLOGUE</h2>
+  <h2 class="TITLE">PROLOGUE<a epub:type="noteref" id="Noteref_0q" href="../Text/PlayFootnotes.xhtml#Note_0q">?</a></h2>
 
   <div class="SPEECH">
     <p class="SPEAKER"></p>
 
-    <p class="LINE">Two households<a epub:type="noteref" id="Noteref_1" href="PlayFootnotes.xhtml#Note_1">1</a>, both alike in dignity<a epub:type="noteref" id="Noteref_2" href="PlayFootnotes.xhtml#Note_2">*</a>,</p>
+    <p class="LINE">Two households<a epub:type="noteref" id="Noteref_1" href="../Text/PlayFootnotes.xhtml#Note_1">1</a>, both alike in dignity<a epub:type="noteref" id="Noteref_2" href="../Text/PlayFootnotes.xhtml#Note_2">*</a>,</p>
 
-    <p class="LINE">In fair Verona<a epub:type="noteref" id="Noteref_3" href="PlayFootnotes.xhtml#Note_3">*</a>, where we lay our scene,</p>
+    <p class="LINE">In fair Verona<a epub:type="noteref" id="Noteref_3" href="../Text/PlayFootnotes.xhtml#Note_3">*</a>, where we lay our scene,</p>
 
-    <p class="LINE">From ancient grudge<a epub:type="noteref" id="Noteref_8" href="PlayFootnotes.xhtml#Note_8">*</a> break to new mutiny,</p>
+    <p class="LINE">From ancient grudge<a epub:type="noteref" id="Noteref_8" href="../Text/PlayFootnotes.xhtml#Note_8">*</a> break to new mutiny,</p>
 
     <p class="LINE">Where civil blood makes civil hands unclean.</p>
 
-    <p class="LINE">From forth the fatal loins of these two foes<a epub:type="noteref" id="Noteref_4" href="PlayFootnotes.xhtml#Note_4">voc</a></p>
+    <p class="LINE">From forth the fatal loins of these two foes<a epub:type="noteref" id="Noteref_4" href="../Text/PlayFootnotes.xhtml#Note_4">voc</a></p>
 
-    <p class="LINE">A pair of star-cross'd lovers take their life;<a epub:type="noteref" id="Noteref_5" href="PlayFootnotes.xhtml#Note_5">?</a></p>
+    <p class="LINE">A pair of star-cross'd lovers take their life;<a epub:type="noteref" id="Noteref_5" href="../Text/PlayFootnotes.xhtml#Note_5">?</a></p>
 
     <p class="LINE">Whole misadventured piteous overthrows</p>
 
-    <p class="LINE">Do with their death bury their parents' strife<a epub:type="noteref" id="Noteref_6" href="PlayFootnotes.xhtml#Note_6">voc</a>.</p>
+    <p class="LINE">Do with their death bury their parents' strife<a epub:type="noteref" id="Noteref_6" href="../Text/PlayFootnotes.xhtml#Note_6">voc</a>.</p>
 
     <p class="LINE">The fearful passage of their death-mark'd love,</p>
 
     <p class="LINE">And the continuance of their parents' rage,</p>
 
-    <p class="LINE">Which, but<a epub:type="noteref" id="Noteref_7" href="PlayFootnotes.xhtml#Note_7">*</a> their children's end, nought<a epub:type="noteref" id="Noteref_9" href="PlayFootnotes.xhtml#Note_9">voc</a> could remove,</p>
+    <p class="LINE">Which, but<a epub:type="noteref" id="Noteref_7" href="../Text/PlayFootnotes.xhtml#Note_7">*</a> their children's end, nought<a epub:type="noteref" id="Noteref_9" href="../Text/PlayFootnotes.xhtml#Note_9">voc</a> could remove,</p>
 
     <p class="LINE">Is now the two hours' traffic of our stage;</p>
 
