--- a/src/Test interactive Epub checker (epub3)/OEBPS/Text/footnotes.xhtml
+++ b/src/Test interactive Epub checker (epub3)/OEBPS/Text/footnotes.xhtml
@@ -12,11 +12,11 @@
       <h2 class="normal">NOTES:</h2>
 
       <div class="footnote">
-        <p epub:type="footnote" id="Footnote_4"><a name="Footnote_4" href="noteref.xhtml#FNanchor_4" class="label">[4]</a>乾 (gan1 qian2): dry; first hexagram; warming principle of the sun, penetrating and fertilizing, heavenly generative principle (male) [20094]</p>
+        <p epub:type="footnote" id="Footnote_4"><a name="Footnote_4" href="../Text/noteref.xhtml#FNanchor_4" class="label">[4]</a>乾 (gan1 qian2): dry; first hexagram; warming principle of the sun, penetrating and fertilizing, heavenly generative principle (male) [20094]</p>
 
-        <p epub:type="footnote" id="Footnote_5"><a name="Footnote_5" href="noteref.xhtml#FNanchor_5" class="label">[5]</a>一 (yi1): one; a, an; alone [19968]</p>
+        <p epub:type="footnote" id="Footnote_5"><a name="Footnote_5" href="../Text/noteref.xhtml#FNanchor_5" class="label">[5]</a>一 (yi1): one; a, an; alone [19968]</p>
 
-        <p epub:type="footnote" id="Footnote_6"><a name="Footnote_6" href="noteref.xhtml#FNanchor_6" class="label">[6]</a>卦 (gua4): fortune telling; tell fortunes [21350]</p>
+        <p epub:type="footnote" id="Footnote_6"><a name="Footnote_6" href="../Text/noteref.xhtml#FNanchor_6" class="label">[6]</a>卦 (gua4): fortune telling; tell fortunes [21350]</p>
       </div>
     </div>
   </div>
