--- a/src/Test interactive Epub checker (epub3)/OEBPS/Text/nav.xhtml
+++ b/src/Test interactive Epub checker (epub3)/OEBPS/Text/nav.xhtml
@@ -13,131 +13,131 @@
     <h1>Table of Contents</h1>
     <ol>
       <li>
-        <a href="Section0001.xhtml">Interactive epub checker</a>
+        <a href="../Text/Section0001.xhtml">Interactive epub checker</a>
       <ol>
         <li>
-          <a href="Section0001.xhtml#sigil_toc_id_26">Fxp</a>
+          <a href="../Text/Section0001.xhtml#sigil_toc_id_26">Fxp</a>
         </li>
         <li>
-          <a href="footnotes.xhtml">NOTES:</a>
+          <a href="../Text/footnotes.xhtml">NOTES:</a>
         </li>
       </ol>
       </li>
       <li>
-        <a href="quizInHeadScript.xhtml">What is the capital of France?</a>
+        <a href="../Text/quizInHeadScript.xhtml">What is the capital of France?</a>
       </li>
       <li>
-        <a href="FormMultiQuiz.xhtml">Forms</a>
+        <a href="../Text/FormMultiQuiz.xhtml">Forms</a>
       <ol>
         <li>
-          <a href="FormMultiQuiz.xhtml#sigil_toc_id_15">Quiz</a>
+          <a href="../Text/FormMultiQuiz.xhtml#sigil_toc_id_15">Quiz</a>
         </li>
         <li>
-          <a href="FormMultiQuiz.xhtml#sigil_toc_id_16">style actions from input controls</a>
+          <a href="../Text/FormMultiQuiz.xhtml#sigil_toc_id_16">style actions from input controls</a>
         </li>
         <li>
-          <a href="showHideTranslation.xhtml">L'horloge The clock</a>
+          <a href="../Text/showHideTranslation.xhtml">L'horloge The clock</a>
         </li>
         <li>
-          <a href="showHideTranslation.xhtml#sigil_toc_id_1">english french</a>
+          <a href="../Text/showHideTranslation.xhtml#sigil_toc_id_1">english french</a>
         <ol>
           <li>
-            <a href="showHideTranslationInHead.xhtml">Hide translation in head function</a>
+            <a href="../Text/showHideTranslationInHead.xhtml">Hide translation in head function</a>
           </li>
         </ol>
         </li>
         <li>
-          <a href="showHideTranslationInHead.xhtml#sigil_toc_id_2">L'horloge The clock</a>
+          <a href="../Text/showHideTranslationInHead.xhtml#sigil_toc_id_2">L'horloge The clock</a>
         </li>
         <li>
-          <a href="showHideTranslationInHead.xhtml#sigil_toc_id_1">english french</a>
-        </li>
-      </ol>
-      </li>
-      <li>
-        <a href="ShowTranslationTitle.xhtml">Title attribute</a>
-      <ol>
-        <li>
-          <a href="ShowTranslationTitle.xhtml#sigil_toc_id_24">with anchor node</a>
-        </li>
-        <li>
-          <a href="ShowTranslationTitle.xhtml#sigil_toc_id_25">with paragraph node</a>
+          <a href="../Text/showHideTranslationInHead.xhtml#sigil_toc_id_1">english french</a>
         </li>
       </ol>
       </li>
       <li>
-        <a href="svg.xhtml">svg</a>
-      </li>
-      <li>
-        <a href="mathml.xhtml">Mathml equation</a>
+        <a href="../Text/ShowTranslationTitle.xhtml">Title attribute</a>
       <ol>
         <li>
-          <a href="mathml.xhtml#sigil_toc_id_23">Result</a>
+          <a href="../Text/ShowTranslationTitle.xhtml#sigil_toc_id_24">with anchor node</a>
+        </li>
+        <li>
+          <a href="../Text/ShowTranslationTitle.xhtml#sigil_toc_id_25">with paragraph node</a>
         </li>
       </ol>
       </li>
       <li>
-        <a href="charactersCheck.xhtml">Characters and layout</a>
+        <a href="../Text/svg.xhtml">svg</a>
+      </li>
+      <li>
+        <a href="../Text/mathml.xhtml">Mathml equation</a>
       <ol>
         <li>
-          <a href="charactersCheck.xhtml#sigil_toc_id_7">Greek</a>
+          <a href="../Text/mathml.xhtml#sigil_toc_id_23">Result</a>
+        </li>
+      </ol>
+      </li>
+      <li>
+        <a href="../Text/charactersCheck.xhtml">Characters and layout</a>
+      <ol>
+        <li>
+          <a href="../Text/charactersCheck.xhtml#sigil_toc_id_7">Greek</a>
         </li>
         <li>
-          <a href="charactersCheck.xhtml#sigil_toc_id_8">Tibetan</a>
+          <a href="../Text/charactersCheck.xhtml#sigil_toc_id_8">Tibetan</a>
         </li>
         <li>
-          <a href="charactersCheck.xhtml#sigil_toc_id_9">Sanskrit</a>
+          <a href="../Text/charactersCheck.xhtml#sigil_toc_id_9">Sanskrit</a>
         </li>
         <li>
-          <a href="charactersCheck.xhtml#sigil_toc_id_10">Zhuyin Bopomofo Chinese Taiwan</a>
+          <a href="../Text/charactersCheck.xhtml#sigil_toc_id_10">Zhuyin Bopomofo Chinese Taiwan</a>
         <ol>
           <li>
-            <a href="charactersCheck.xhtml#sigil_toc_id_11">Ruby</a>
+            <a href="../Text/charactersCheck.xhtml#sigil_toc_id_11">Ruby</a>
           </li>
           <li>
-            <a href="charactersCheck.xhtml#sigil_toc_id_12">Ruby inter-character workaround</a>
+            <a href="../Text/charactersCheck.xhtml#sigil_toc_id_12">Ruby inter-character workaround</a>
           </li>
         </ol>
         </li>
         <li>
-          <a href="charactersCheck.xhtml#sigil_toc_id_13">Simplified Chinese</a>
+          <a href="../Text/charactersCheck.xhtml#sigil_toc_id_13">Simplified Chinese</a>
         </li>
         <li>
-          <a href="charactersCheck.xhtml#sigil_toc_id_14">Traditional Chinese</a>
+          <a href="../Text/charactersCheck.xhtml#sigil_toc_id_14">Traditional Chinese</a>
         </li>
         <li>
-          <a href="verticalJap.xhtml">一</a>
+          <a href="../Text/verticalJap.xhtml">一</a>
         </li>
       </ol>
       </li>
       <li>
-        <a href="InlineScript.xhtml">Alerts</a>
+        <a href="../Text/InlineScript.xhtml">Alerts</a>
       <ol>
         <li>
-          <a href="InlineScript.xhtml#sigil_toc_id_19">Simple paragraph</a>
+          <a href="../Text/InlineScript.xhtml#sigil_toc_id_19">Simple paragraph</a>
         </li>
         <li>
-          <a href="InlineScript.xhtml#sigil_toc_id_20">Alert via link</a>
+          <a href="../Text/InlineScript.xhtml#sigil_toc_id_20">Alert via link</a>
         </li>
         <li>
-          <a href="InlineScript.xhtml#sigil_toc_id_21">Javascript change font weight and color</a>
+          <a href="../Text/InlineScript.xhtml#sigil_toc_id_21">Javascript change font weight and color</a>
         </li>
       </ol>
       </li>
       <li>
-        <a href="insertruleLoop.xhtml">Styles loop and alert</a>
+        <a href="../Text/insertruleLoop.xhtml">Styles loop and alert</a>
       </li>
       <li>
-        <a href="Jquery.xhtml">Test jquery inside epub</a>
+        <a href="../Text/Jquery.xhtml">Test jquery inside epub</a>
       </li>
       <li>
-        <a href="Jquery.xhtml#sigil_toc_id_22">Tap Me too!</a>
+        <a href="../Text/Jquery.xhtml#sigil_toc_id_22">Tap Me too!</a>
       </li>
       <li>
-        <a href="queryselectorall.xhtml">queryselectorall</a>
+        <a href="../Text/queryselectorall.xhtml">queryselectorall</a>
       </li>
       <li>
-        <a href="noteref.xhtml">noterefs</a>
+        <a href="../Text/noteref.xhtml">noterefs</a>
       </li>
     </ol>
   </nav>
