--- a/src/Test interactive Epub checker (epub3)/OEBPS/Text/noteref.xhtml
+++ b/src/Test interactive Epub checker (epub3)/OEBPS/Text/noteref.xhtml
@@ -8,7 +8,7 @@
 <body>
 <h1>noterefs</h1>
 <p>A popup with the pronunciation and a translation should appear when you click on each character:</p>
-  <p><a epub:type="noteref" id="FNanchor_4" href="footnotes.xhtml#Footnote_4" class="fnanchor">乾</a> <a epub:type="noteref" id="FNanchor_5" href="footnotes.xhtml#Footnote_5" class="fnanchor">一</a> <a epub:type="noteref" id="FNanchor_6" href="footnotes.xhtml#Footnote_6" class="fnanchor">卦</a>
+  <p><a epub:type="noteref" id="FNanchor_4" href="../Text/footnotes.xhtml#Footnote_4" class="fnanchor">乾</a> <a epub:type="noteref" id="FNanchor_5" href="../Text/footnotes.xhtml#Footnote_5" class="fnanchor">一</a> <a epub:type="noteref" id="FNanchor_6" href="../Text/footnotes.xhtml#Footnote_6" class="fnanchor">卦</a>
 </p>
 </body>
 </html>
