--- a/src/Test interactive Epub checker (epub3)/OEBPS/Text/PlayFootnotes.xhtml
+++ b/src/Test interactive Epub checker (epub3)/OEBPS/Text/PlayFootnotes.xhtml
@@ -8,37 +8,47 @@
 
 <body>
   <div epub-type="footnotes">
-<p epub:type="footnote" id="Note_1"><a name="Note_1" href="footnotePlay.xhtml#Noteref_1">1</a> families</p>
+<p epub:type="footnote" id="Note_0"><a name="Note_1" href="../Text/footnotePlay.xhtml#Noteref_0"></a> William Shakespeare, (1564, 1616)<br/> <img alt="Shakespeare" src="../Images/Shakespeare.png"/></p>
+<p epub:type="footnote" id="Note_0q"><a name="Note_1" href="../Text/footnotePlay.xhtml#Noteref_0q"></a> When is Shakespeare born? <br/>
 
-<p epub:type="footnote" id="Note_2"><a name="Note_2" href="footnotePlay.xhtml#Noteref_2">2</a> of same (high) rank</p>
+<input type="radio" name="birth" value="1564"/> 1564 <span id="q0" style="font-weight:bold; color:green"></span><br/> 
+<input type="radio" name="birth" value="1664"/> 1664<br/> 
+<input type="radio" name="birth" value="1515"/> 1515<br/> 
+<input type="radio" name="birth" value="1516"/> 1516<br/>
+<input type="button" onclick="document.getElementById('q0').innerText =' ✓'" value="check"/> 
+</p>
 
-<p epub:type="footnote" id="Note_3"><a name="Note_3" href="footnotePlay.xhtml#Noteref_3">3</a> City located in <b>Italy</b> (Europe)</p>
+<p epub:type="footnote" id="Note_1"><a name="Note_1" href="../Text/footnotePlay.xhtml#Noteref_1">1</a> families</p>
 
-<p epub:type="footnote" id="Note_4"><a name="Note_4" href="footnotePlay.xhtml#Noteref_4">4</a> foe = enemy</p>
+<p epub:type="footnote" id="Note_2"><a name="Note_2" href="../Text/footnotePlay.xhtml#Noteref_2">2</a> of same (high) rank</p>
 
-<p epub:type="footnote" id="Note_5"><a name="Note_5" href="footnotePlay.xhtml#Noteref_5">5</a> Is Shakespeare giving away the end of the play? Why would he do that? </p>
+<p epub:type="footnote" id="Note_3"><a name="Note_3" href="../Text/footnotePlay.xhtml#Noteref_3">3</a> City located in <b>Italy</b> (Europe)</p>
 
-<p epub:type="footnote" id="Note_6"><a name="Note_6" href="footnotePlay.xhtml#Noteref_6">6</a> strife = conflict. <br/>Note:  <i>Strife</i> is replaced by <b>rage</b> in the <u>International Student edition</u> p. 873), </p>
+<p epub:type="footnote" id="Note_4"><a name="Note_4" href="../Text/footnotePlay.xhtml#Noteref_4">4</a> foe = enemy</p>
 
-<p epub:type="footnote" id="Note_7"><a name="Note_7" href="footnotePlay.xhtml#Noteref_7">7</a> except</p>
+<p epub:type="footnote" id="Note_5"><a name="Note_5" href="../Text/footnotePlay.xhtml#Noteref_5">5</a> Is Shakespeare giving away the end of the play? Why would he do that? </p>
 
-<p epub:type="footnote" id="Note_8"><a name="Note_8" href="footnotePlay.xhtml#Noteref_8">8</a> old conflict</p>
+<p epub:type="footnote" id="Note_6"><a name="Note_6" href="../Text/footnotePlay.xhtml#Noteref_6">6</a> strife = conflict. <br/><br/>Note:  <i>Strife</i> is replaced by <b>rage</b> in the <u>International Student edition</u> p. 873 </p>
 
-<p epub:type="footnote" id="Note_9"><a name="Note_9" href="footnotePlay.xhtml#Noteref_9">9</a> nought = nothing</p>
+<p epub:type="footnote" id="Note_7"><a name="Note_7" href="../Text/footnotePlay.xhtml#Noteref_7">7</a> except</p>
 
-<p epub:type="footnote" id="Note_10"><a name="Note_10" href="footnotePlay.xhtml#Noteref_10">10</a> text</p>
+<p epub:type="footnote" id="Note_8"><a name="Note_8" href="../Text/footnotePlay.xhtml#Noteref_8">8</a> old conflict</p>
 
-<p epub:type="footnote" id="Note_11"><a name="Note_11" href="footnotePlay.xhtml#Noteref_11">11</a> text</p>
+<p epub:type="footnote" id="Note_9"><a name="Note_9" href="../Text/footnotePlay.xhtml#Noteref_9">9</a> nought = nothing</p>
 
-<p epub:type="footnote" id="Note_12"><a name="Note_12" href="footnotePlay.xhtml#Noteref_12">12</a> text</p>
+<p epub:type="footnote" id="Note_10"><a name="Note_10" href="../Text/footnotePlay.xhtml#Noteref_10">10</a> text</p>
 
-<p epub:type="footnote" id="Note_13"><a name="Note_13" href="footnotePlay.xhtml#Noteref_13">13</a> text</p>
+<p epub:type="footnote" id="Note_11"><a name="Note_11" href="../Text/footnotePlay.xhtml#Noteref_11">11</a> text</p>
 
-<p epub:type="footnote" id="Note_14"><a name="Note_14" href="footnotePlay.xhtml#Noteref_14">14</a> text</p>
+<p epub:type="footnote" id="Note_12"><a name="Note_12" href="../Text/footnotePlay.xhtml#Noteref_12">12</a> text</p>
 
-<p epub:type="footnote" id="Note_15"><a name="Note_15" href="footnotePlay.xhtml#Noteref_15">15</a> text</p>
+<p epub:type="footnote" id="Note_13"><a name="Note_13" href="../Text/footnotePlay.xhtml#Noteref_13">13</a> text</p>
 
-<p epub:type="footnote" id="Note_16"><a name="Note_16" href="footnotePlay.xhtml#Noteref_16">16</a> text</p>
+<p epub:type="footnote" id="Note_14"><a name="Note_14" href="../Text/footnotePlay.xhtml#Noteref_14">14</a> text</p>
+
+<p epub:type="footnote" id="Note_15"><a name="Note_15" href="../Text/footnotePlay.xhtml#Noteref_15">15</a> text</p>
+
+<p epub:type="footnote" id="Note_16"><a name="Note_16" href="../Text/footnotePlay.xhtml#Noteref_16">16</a> text</p>
 
 
 </div>
